[package]
name = "problem0977"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p0977a"
path = "src/problem0977a.rs"

[[bin]]
name = "p0977b"
path = "src/problem0977b.rs"

[[bin]]
name = "p0977c"
path = "src/problem0977c.rs"
