[package]
name = "problem1352"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1352a"
path = "src/problem1352a.rs"

[[bin]]
name = "p1352b"
path = "src/problem1352b.rs"

[[bin]]
name = "p1352c"
path = "src/problem1352c.rs"

[[bin]]
name = "p1352d"
path = "src/problem1352d.rs"
