[package]
name = "problem1399"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1399a"
path = "src/problem1399a.rs"

[[bin]]
name = "p1399b"
path = "src/problem1399b.rs"

[[bin]]
name = "p1399c"
path = "src/problem1399c.rs"
