[package]
name = "problem1520"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1520a"
path = "src/problem1520a.rs"

[[bin]]
name = "p1520b"
path = "src/problem1520b.rs"

[[bin]]
name = "p1520c"
path = "src/problem1520c.rs"

[[bin]]
name = "p1520d"
path = "src/problem1520d.rs"
