[package]
name = "problem1537"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1537a"
path = "src/problem1537a.rs"

[[bin]]
name = "p1537b"
path = "src/problem1537b.rs"

[[bin]]
name = "p1537c"
path = "src/problem1537c.rs"
