[package]
name = "problem1807"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1807b"
path = "src/problem1807b.rs"

[[bin]]
name = "p1807c"
path = "src/problem1807c.rs"

[[bin]]
name = "p1807d"
path = "src/problem1807d.rs"
