[package]
name = "problem1915"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1915a"
path = "src/problem1915a.rs"

[[bin]]
name = "p1915b"
path = "src/problem1915b.rs"

[[bin]]
name = "p1915c"
path = "src/problem1915c.rs"

[[bin]]
name = "p1915d"
path = "src/problem1915d.rs"
