[package]
name = "problem1992"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1992a"
path = "src/problem1992a.rs"

[[bin]]
name = "p1992b"
path = "src/problem1992b.rs"

[[bin]]
name = "p1992c"
path = "src/problem1992c.rs"
