[package]
name = "problem1324"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "b"
path = "src/problem1324b.rs"

[[bin]]
name = "c"
path = "src/problem1324c.rs"

[[bin]]
name = "d"
path = "src/problem1324d.rs"