[package]
name = "problem1360"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1360a"
path = "src/problem1360a.rs"

[[bin]]
name = "p1360b"
path = "src/problem1360b.rs"

[[bin]]
name = "p1360c"
path = "src/problem1360c.rs"

[[bin]]
name = "p1360d"
path = "src/problem1360d.rs"
