[package]
name = "problem1433"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "a"
path = "src/problem1433a.rs"

[[bin]]
name = "b"
path = "src/problem1433b.rs"

[[bin]]
name = "c"
path = "src/problem1433c.rs"