[package]
name = "problem1472"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1472a"
path = "src/problem1472a.rs"

[[bin]]
name = "p1472b"
path = "src/problem1472b.rs"

[[bin]]
name = "p1472c"
path = "src/problem1472c.rs"

[[bin]]
name = "p1472d"
path = "src/problem1472d.rs"
