[package]
name = "problem1538"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1538a"
path = "src/problem1538a.rs"

[[bin]]
name = "p1538b"
path = "src/problem1538b.rs"

[[bin]]
name = "p1538c"
path = "src/problem1538c.rs"
