[package]
name = "problem1690"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1690b"
path = "src/problem1690b.rs"

[[bin]]
name = "p1690c"
path = "src/problem1690c.rs"

[[bin]]
name = "p1690d"
path = "src/problem1690d.rs"
