[package]
name = "problem1714"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1714a"
path = "src/problem1714a.rs"

[[bin]]
name = "p1714b"
path = "src/problem1714b.rs"

[[bin]]
name = "p1714c"
path = "src/problem1714c.rs"
