[package]
name = "problem1822"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1822a"
path = "src/problem1822a.rs"

[[bin]]
name = "p1822b"
path = "src/problem1822b.rs"

[[bin]]
name = "p1822c"
path = "src/problem1822c.rs"
