[package]
name = "problem1829"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1829a"
path = "src/problem1829a.rs"

[[bin]]
name = "p1829b"
path = "src/problem1829b.rs"

[[bin]]
name = "p1829c"
path = "src/problem1829c.rs"
