[package]
name = "problem1833"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1833a"
path = "src/problem1833a.rs"

[[bin]]
name = "p1833b"
path = "src/problem1833b.rs"

[[bin]]
name = "p1833c"
path = "src/problem1833c.rs"
