[package]
name = "problem1843"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1843a"
path = "src/problem1843a.rs"

[[bin]]
name = "p1843b"
path = "src/problem1843b.rs"

[[bin]]
name = "p1843c"
path = "src/problem1843c.rs"
