[package]
name = "problem1850"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "a"
path = "src/problem1850a.rs"

[[bin]]
name = "b"
path = "src/problem1850b.rs"

[[bin]]
name = "c"
path = "src/problem1850c.rs"

[[bin]]
name = "d"
path = "src/problem1850d.rs"