[package]
name = "problem1850"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1850a"
path = "src/problem1850a.rs"

[[bin]]
name = "p1850b"
path = "src/problem1850b.rs"

[[bin]]
name = "p1850c"
path = "src/problem1850c.rs"

[[bin]]
name = "p1850d"
path = "src/problem1850d.rs"
