[package]
name = "problem1857"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1857a"
path = "src/problem1857a.rs"

[[bin]]
name = "p1857b"
path = "src/problem1857b.rs"

[[bin]]
name = "p1857c"
path = "src/problem1857c.rs"
