[package]
name = "problem1873"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "a"
path = "src/problem1873a.rs"

[[bin]]
name = "b"
path = "src/problem1873b.rs"

[[bin]]
name = "c"
path = "src/problem1873c.rs"

[[bin]]
name = "d"
path = "src/problem1873d.rs"

[[bin]]
name = "e"
path = "src/problem1873e.rs"