[package]
name = "problem1873"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "p1873a"
path = "src/problem1873a.rs"

[[bin]]
name = "p1873b"
path = "src/problem1873b.rs"

[[bin]]
name = "p1873c"
path = "src/problem1873c.rs"

[[bin]]
name = "p1873d"
path = "src/problem1873d.rs"

[[bin]]
name = "p1873e"
path = "src/problem1873e.rs"
